# notification-service

./: .env.example  .gitignore  README.md  pyproject.toml
apps/notifications/: models.py
apps/notifications/migrations/: 0001_initial.py
apps/orders/: models.py  serializers.py  services.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_order_orderitem_order_order_user_placed_idx_and_more.py
apps/users/: authentication.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py  0003_remove_user_username.py  0004_alter_notificationpreference_channel.py
common/: choices.py
config/: settings.py  urls.py
