[project]
name = "notification-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=48.0.0",
    "django>=6.0.6",
    "django-stubs>=6.0.5",
    "django-types>=0.24.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-types>=0.9.0",
    "psycopg2-binary>=2.9.12",
    "python-decouple>=3.8",
    "uuid-utils>=0.16.0",
]

[tool.basedpyright]
typeCheckingMode = "basic"
